Project7_early/Project7/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE
    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> <empty>
Rule 4     statement -> expr ;
Rule 5     statement -> declaration ;
Rule 6     statement -> block
Rule 7     statement -> if_block
Rule 8     statement -> while_loop
Rule 9     statement -> break ;
Rule 10    statement -> return_statement ;
Rule 11    statement -> function_def
Rule 12    statement -> ;
Rule 13    block -> OPEN_BLOCK statements CLOSE_BLOCK
Rule 14    if_block -> COMMAND_IF ( expr ) statement
Rule 15    if_block -> COMMAND_IF ( expr ) statement COMMAND_ELSE statement
Rule 16    break -> COMMAND_BREAK
Rule 17    while_loop -> COMMAND_WHILE ( expr ) statement
Rule 18    declaration -> TYPE ID
Rule 19    declaration -> TYPE ID = expr
Rule 20    declaration -> ARRAY_TYPE ( TYPE ) ID
Rule 21    declaration -> ARRAY_TYPE ( TYPE ) ID = expr
Rule 22    declaration -> STRING_TYPE ID
Rule 23    declaration -> STRING_TYPE ID = expr
Rule 24    all_type -> TYPE
Rule 25    all_type -> STRING_TYPE
Rule 26    all_type -> ARRAY_TYPE ( TYPE )
Rule 27    return_statement -> FUNC_RETURN expr
Rule 28    function_def -> FUNC_DEFINE all_type ID ( parameters ) block
Rule 29    function_def -> FUNC_DEFINE all_type ID ( ) block
Rule 30    parameters -> parameters , parameter
Rule 31    parameters -> parameter
Rule 32    parameter -> all_type ID
Rule 33    expr -> [ elements ]
Rule 34    expr -> [ ]
Rule 35    expr -> STRING_LITERAL
Rule 36    elements -> expr
Rule 37    elements -> elements , expr
Rule 38    expr -> expr AR_METHOD_SIZE ( )
Rule 39    expr -> expr AR_METHOD_SIZE ( expr )
Rule 40    expr -> expr AR_METHOD_RESIZE ( arguments )
Rule 41    expr -> variable [ expr ]
Rule 42    expr -> variable [ expr ] = expr
Rule 43    expr -> expr + expr
Rule 44    expr -> expr - expr
Rule 45    expr -> expr * expr
Rule 46    expr -> expr / expr
Rule 47    expr -> expr ASSIGN_ADD expr
Rule 48    expr -> expr ASSIGN_SUB expr
Rule 49    expr -> expr ASSIGN_MULT expr
Rule 50    expr -> expr ASSIGN_DIV expr
Rule 51    expr -> ( expr )
Rule 52    expr -> expr COMP_EQU expr
Rule 53    expr -> expr COMP_NEQU expr
Rule 54    expr -> expr < expr
Rule 55    expr -> expr COMP_LTE expr
Rule 56    expr -> expr > expr
Rule 57    expr -> expr COMP_GTE expr
Rule 58    expr -> expr BOOL_AND expr
Rule 59    expr -> expr BOOL_OR expr
Rule 60    expr -> ! expr
Rule 61    expr -> COMMAND_PRINT ( arguments )
Rule 62    arguments -> expr
Rule 63    arguments -> arguments , expr
Rule 64    expr -> COMMAND_RANDOM ( expr )
Rule 65    expr -> VAL_LITERAL
Rule 66    expr -> - VAL_LITERAL
Rule 67    expr -> CHAR_LITERAL
Rule 68    expr -> variable
Rule 69    expr -> - variable
Rule 70    expr -> variable = expr
Rule 71    variable -> ID

Terminals, with rules where they appear

!                    : 60
(                    : 14 15 17 20 21 26 28 29 38 39 40 51 61 64
)                    : 14 15 17 20 21 26 28 29 38 39 40 51 61 64
*                    : 45
+                    : 43
,                    : 30 37 63
-                    : 44 66 69
/                    : 46
;                    : 4 5 9 10 12
<                    : 54
=                    : 19 21 23 42 70
>                    : 56
ARRAY_TYPE           : 20 21 26
AR_METHOD_RESIZE     : 40
AR_METHOD_SIZE       : 38 39
ASSIGN_ADD           : 47
ASSIGN_DIV           : 50
ASSIGN_MULT          : 49
ASSIGN_SUB           : 48
BOOL_AND             : 58
BOOL_OR              : 59
CHAR_LITERAL         : 67
CLOSE_BLOCK          : 13
COMMAND_BREAK        : 16
COMMAND_ELSE         : 15
COMMAND_IF           : 14 15
COMMAND_PRINT        : 61
COMMAND_RANDOM       : 64
COMMAND_WHILE        : 17
COMMENT              : 
COMP_EQU             : 52
COMP_GTE             : 57
COMP_LTE             : 55
COMP_NEQU            : 53
FUNC_DEFINE          : 28 29
FUNC_RETURN          : 27
ID                   : 18 19 20 21 22 23 28 29 32 71
OPEN_BLOCK           : 13
STRING_LITERAL       : 35
STRING_TYPE          : 22 23 25
TYPE                 : 18 19 20 21 24 26
VAL_LITERAL          : 65 66
WHITESPACE           : 
[                    : 33 34 41 42
]                    : 33 34 41 42
error                : 

Nonterminals, with rules where they appear

all_type             : 28 29 32
arguments            : 40 61 63
block                : 6 28 29
break                : 9
declaration          : 5
elements             : 33 37
expr                 : 4 14 15 17 19 21 23 27 36 37 38 39 39 40 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 62 63 64 70
function_def         : 11
if_block             : 7
parameter            : 30 31
parameters           : 28 30
program              : 0
return_statement     : 10
statement            : 2 14 15 15 17
statements           : 1 2 13
variable             : 41 42 68 69 70
while_loop           : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> .

    ;               reduce using rule 3 (statements -> .)
    [               reduce using rule 3 (statements -> .)
    STRING_LITERAL  reduce using rule 3 (statements -> .)
    (               reduce using rule 3 (statements -> .)
    !               reduce using rule 3 (statements -> .)
    COMMAND_PRINT   reduce using rule 3 (statements -> .)
    COMMAND_RANDOM  reduce using rule 3 (statements -> .)
    VAL_LITERAL     reduce using rule 3 (statements -> .)
    -               reduce using rule 3 (statements -> .)
    CHAR_LITERAL    reduce using rule 3 (statements -> .)
    TYPE            reduce using rule 3 (statements -> .)
    ARRAY_TYPE      reduce using rule 3 (statements -> .)
    STRING_TYPE     reduce using rule 3 (statements -> .)
    OPEN_BLOCK      reduce using rule 3 (statements -> .)
    COMMAND_IF      reduce using rule 3 (statements -> .)
    COMMAND_WHILE   reduce using rule 3 (statements -> .)
    COMMAND_BREAK   reduce using rule 3 (statements -> .)
    FUNC_RETURN     reduce using rule 3 (statements -> .)
    FUNC_DEFINE     reduce using rule 3 (statements -> .)
    ID              reduce using rule 3 (statements -> .)
    $end            reduce using rule 3 (statements -> .)

    program                        shift and go to state 1
    statements                     shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . expr ;
    (5) statement -> . declaration ;
    (6) statement -> . block
    (7) statement -> . if_block
    (8) statement -> . while_loop
    (9) statement -> . break ;
    (10) statement -> . return_statement ;
    (11) statement -> . function_def
    (12) statement -> . ;
    (33) expr -> . [ elements ]
    (34) expr -> . [ ]
    (35) expr -> . STRING_LITERAL
    (38) expr -> . expr AR_METHOD_SIZE ( )
    (39) expr -> . expr AR_METHOD_SIZE ( expr )
    (40) expr -> . expr AR_METHOD_RESIZE ( arguments )
    (41) expr -> . variable [ expr ]
    (42) expr -> . variable [ expr ] = expr
    (43) expr -> . expr + expr
    (44) expr -> . expr - expr
    (45) expr -> . expr * expr
    (46) expr -> . expr / expr
    (47) expr -> . expr ASSIGN_ADD expr
    (48) expr -> . expr ASSIGN_SUB expr
    (49) expr -> . expr ASSIGN_MULT expr
    (50) expr -> . expr ASSIGN_DIV expr
    (51) expr -> . ( expr )
    (52) expr -> . expr COMP_EQU expr
    (53) expr -> . expr COMP_NEQU expr
    (54) expr -> . expr < expr
    (55) expr -> . expr COMP_LTE expr
    (56) expr -> . expr > expr
    (57) expr -> . expr COMP_GTE expr
    (58) expr -> . expr BOOL_AND expr
    (59) expr -> . expr BOOL_OR expr
    (60) expr -> . ! expr
    (61) expr -> . COMMAND_PRINT ( arguments )
    (64) expr -> . COMMAND_RANDOM ( expr )
    (65) expr -> . VAL_LITERAL
    (66) expr -> . - VAL_LITERAL
    (67) expr -> . CHAR_LITERAL
    (68) expr -> . variable
    (69) expr -> . - variable
    (70) expr -> . variable = expr
    (18) declaration -> . TYPE ID
    (19) declaration -> . TYPE ID = expr
    (20) declaration -> . ARRAY_TYPE ( TYPE ) ID
    (21) declaration -> . ARRAY_TYPE ( TYPE ) ID = expr
    (22) declaration -> . STRING_TYPE ID
    (23) declaration -> . STRING_TYPE ID = expr
    (13) block -> . OPEN_BLOCK statements CLOSE_BLOCK
    (14) if_block -> . COMMAND_IF ( expr ) statement
    (15) if_block -> . COMMAND_IF ( expr ) statement COMMAND_ELSE statement
    (17) while_loop -> . COMMAND_WHILE ( expr ) statement
    (16) break -> . COMMAND_BREAK
    (27) return_statement -> . FUNC_RETURN expr
    (28) function_def -> . FUNC_DEFINE all_type ID ( parameters ) block
    (29) function_def -> . FUNC_DEFINE all_type ID ( ) block
    (71) variable -> . ID

    $end            reduce using rule 1 (program -> statements .)
    ;               shift and go to state 5
    [               shift and go to state 13
    STRING_LITERAL  shift and go to state 14
    (               shift and go to state 15
    !               shift and go to state 18
    COMMAND_PRINT   shift and go to state 19
    COMMAND_RANDOM  shift and go to state 20
    VAL_LITERAL     shift and go to state 21
    -               shift and go to state 17
    CHAR_LITERAL    shift and go to state 22
    TYPE            shift and go to state 23
    ARRAY_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    OPEN_BLOCK      shift and go to state 27
    COMMAND_IF      shift and go to state 28
    COMMAND_WHILE   shift and go to state 29
    COMMAND_BREAK   shift and go to state 30
    FUNC_RETURN     shift and go to state 31
    FUNC_DEFINE     shift and go to state 32
    ID              shift and go to state 24

    statement                      shift and go to state 3
    expr                           shift and go to state 4
    declaration                    shift and go to state 6
    block                          shift and go to state 7
    if_block                       shift and go to state 8
    while_loop                     shift and go to state 9
    break                          shift and go to state 10
    return_statement               shift and go to state 11
    function_def                   shift and go to state 12
    variable                       shift and go to state 16

state 3

    (2) statements -> statements statement .

    ;               reduce using rule 2 (statements -> statements statement .)
    [               reduce using rule 2 (statements -> statements statement .)
    STRING_LITERAL  reduce using rule 2 (statements -> statements statement .)
    (               reduce using rule 2 (statements -> statements statement .)
    !               reduce using rule 2 (statements -> statements statement .)
    COMMAND_PRINT   reduce using rule 2 (statements -> statements statement .)
    COMMAND_RANDOM  reduce using rule 2 (statements -> statements statement .)
    VAL_LITERAL     reduce using rule 2 (statements -> statements statement .)
    -               reduce using rule 2 (statements -> statements statement .)
    CHAR_LITERAL    reduce using rule 2 (statements -> statements statement .)
    TYPE            reduce using rule 2 (statements -> statements statement .)
    ARRAY_TYPE      reduce using rule 2 (statements -> statements statement .)
    STRING_TYPE     reduce using rule 2 (statements -> statements statement .)
    OPEN_BLOCK      reduce using rule 2 (statements -> statements statement .)
    COMMAND_IF      reduce using rule 2 (statements -> statements statement .)
    COMMAND_WHILE   reduce using rule 2 (statements -> statements statement .)
    COMMAND_BREAK   reduce using rule 2 (statements -> statements statement .)
    FUNC_RETURN     reduce using rule 2 (statements -> statements statement .)
    FUNC_DEFINE     reduce using rule 2 (statements -> statements statement .)
    ID              reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    CLOSE_BLOCK     reduce using rule 2 (statements -> statements statement .)


state 4

    (4) statement -> expr . ;
    (38) expr -> expr . AR_METHOD_SIZE ( )
    (39) expr -> expr . AR_METHOD_SIZE ( expr )
    (40) expr -> expr . AR_METHOD_RESIZE ( arguments )
    (43) expr -> expr . + expr
    (44) expr -> expr . - expr
    (45) expr -> expr . * expr
    (46) expr -> expr . / expr
    (47) expr -> expr . ASSIGN_ADD expr
    (48) expr -> expr . ASSIGN_SUB expr
    (49) expr -> expr . ASSIGN_MULT expr
    (50) expr -> expr . ASSIGN_DIV expr
    (52) expr -> expr . COMP_EQU expr
    (53) expr -> expr . COMP_NEQU expr
    (54) expr -> expr . < expr
    (55) expr -> expr . COMP_LTE expr
    (56) expr -> expr . > expr
    (57) expr -> expr . COMP_GTE expr
    (58) expr -> expr . BOOL_AND expr
    (59) expr -> expr . BOOL_OR expr

    ;               shift and go to state 33
    AR_METHOD_SIZE  shift and go to state 34
    AR_METHOD_RESIZE shift and go to state 35
    +               shift and go to state 36
    -               shift and go to state 37
    *               shift and go to state 38
    /               shift and go to state 39
    ASSIGN_ADD      shift and go to state 40
    ASSIGN_SUB      shift and go to state 41
    ASSIGN_MULT     shift and go to state 42
    ASSIGN_DIV      shift and go to state 43
    COMP_EQU        shift and go to state 44
    COMP_NEQU       shift and go to state 45
    <               shift and go to state 46
    COMP_LTE        shift and go to state 47
    >               shift and go to state 48
    COMP_GTE        shift and go to state 49
    BOOL_AND        shift and go to state 50
    BOOL_OR         shift and go to state 51


state 5

    (12) statement -> ; .

    ;               reduce using rule 12 (statement -> ; .)
    [               reduce using rule 12 (statement -> ; .)
    STRING_LITERAL  reduce using rule 12 (statement -> ; .)
    (               reduce using rule 12 (statement -> ; .)
    !               reduce using rule 12 (statement -> ; .)
    COMMAND_PRINT   reduce using rule 12 (statement -> ; .)
    COMMAND_RANDOM  reduce using rule 12 (statement -> ; .)
    VAL_LITERAL     reduce using rule 12 (statement -> ; .)
    -               reduce using rule 12 (statement -> ; .)
    CHAR_LITERAL    reduce using rule 12 (statement -> ; .)
    TYPE            reduce using rule 12 (statement -> ; .)
    ARRAY_TYPE      reduce using rule 12 (statement -> ; .)
    STRING_TYPE     reduce using rule 12 (statement -> ; .)
    OPEN_BLOCK      reduce using rule 12 (statement -> ; .)
    COMMAND_IF      reduce using rule 12 (statement -> ; .)
    COMMAND_WHILE   reduce using rule 12 (statement -> ; .)
    COMMAND_BREAK   reduce using rule 12 (statement -> ; .)
    FUNC_RETURN     reduce using rule 12 (statement -> ; .)
    FUNC_DEFINE     reduce using rule 12 (statement -> ; .)
    ID              reduce using rule 12 (statement -> ; .)
    $end            reduce using rule 12 (statement -> ; .)
    CLOSE_BLOCK     reduce using rule 12 (statement -> ; .)
    COMMAND_ELSE    reduce using rule 12 (statement -> ; .)


state 6

    (5) statement -> declaration . ;

    ;               shift and go to state 52


state 7

    (6) statement -> block .

    ;               reduce using rule 6 (statement -> block .)
    [               reduce using rule 6 (statement -> block .)
    STRING_LITERAL  reduce using rule 6 (statement -> block .)
    (               reduce using rule 6 (statement -> block .)
    !               reduce using rule 6 (statement -> block .)
    COMMAND_PRINT   reduce using rule 6 (statement -> block .)
    COMMAND_RANDOM  reduce using rule 6 (statement -> block .)
    VAL_LITERAL     reduce using rule 6 (statement -> block .)
    -               reduce using rule 6 (statement -> block .)
    CHAR_LITERAL    reduce using rule 6 (statement -> block .)
    TYPE            reduce using rule 6 (statement -> block .)
    ARRAY_TYPE      reduce using rule 6 (statement -> block .)
    STRING_TYPE     reduce using rule 6 (statement -> block .)
    OPEN_BLOCK      reduce using rule 6 (statement -> block .)
    COMMAND_IF      reduce using rule 6 (statement -> block .)
    COMMAND_WHILE   reduce using rule 6 (statement -> block .)
    COMMAND_BREAK   reduce using rule 6 (statement -> block .)
    FUNC_RETURN     reduce using rule 6 (statement -> block .)
    FUNC_DEFINE     reduce using rule 6 (statement -> block .)
    ID              reduce using rule 6 (statement -> block .)
    $end            reduce using rule 6 (statement -> block .)
    CLOSE_BLOCK     reduce using rule 6 (statement -> block .)
    COMMAND_ELSE    reduce using rule 6 (statement -> block .)


state 8

    (7) statement -> if_block .

    ;               reduce using rule 7 (statement -> if_block .)
    [               reduce using rule 7 (statement -> if_block .)
    STRING_LITERAL  reduce using rule 7 (statement -> if_block .)
    (               reduce using rule 7 (statement -> if_block .)
    !               reduce using rule 7 (statement -> if_block .)
    COMMAND_PRINT   reduce using rule 7 (statement -> if_block .)
    COMMAND_RANDOM  reduce using rule 7 (statement -> if_block .)
    VAL_LITERAL     reduce using rule 7 (statement -> if_block .)
    -               reduce using rule 7 (statement -> if_block .)
    CHAR_LITERAL    reduce using rule 7 (statement -> if_block .)
    TYPE            reduce using rule 7 (statement -> if_block .)
    ARRAY_TYPE      reduce using rule 7 (statement -> if_block .)
    STRING_TYPE     reduce using rule 7 (statement -> if_block .)
    OPEN_BLOCK      reduce using rule 7 (statement -> if_block .)
    COMMAND_IF      reduce using rule 7 (statement -> if_block .)
    COMMAND_WHILE   reduce using rule 7 (statement -> if_block .)
    COMMAND_BREAK   reduce using rule 7 (statement -> if_block .)
    FUNC_RETURN     reduce using rule 7 (statement -> if_block .)
    FUNC_DEFINE     reduce using rule 7 (statement -> if_block .)
    ID              reduce using rule 7 (statement -> if_block .)
    $end            reduce using rule 7 (statement -> if_block .)
    CLOSE_BLOCK     reduce using rule 7 (statement -> if_block .)
    COMMAND_ELSE    reduce using rule 7 (statement -> if_block .)


state 9

    (8) statement -> while_loop .

    ;               reduce using rule 8 (statement -> while_loop .)
    [               reduce using rule 8 (statement -> while_loop .)
    STRING_LITERAL  reduce using rule 8 (statement -> while_loop .)
    (               reduce using rule 8 (statement -> while_loop .)
    !               reduce using rule 8 (statement -> while_loop .)
    COMMAND_PRINT   reduce using rule 8 (statement -> while_loop .)
    COMMAND_RANDOM  reduce using rule 8 (statement -> while_loop .)
    VAL_LITERAL     reduce using rule 8 (statement -> while_loop .)
    -               reduce using rule 8 (statement -> while_loop .)
    CHAR_LITERAL    reduce using rule 8 (statement -> while_loop .)
    TYPE            reduce using rule 8 (statement -> while_loop .)
    ARRAY_TYPE      reduce using rule 8 (statement -> while_loop .)
    STRING_TYPE     reduce using rule 8 (statement -> while_loop .)
    OPEN_BLOCK      reduce using rule 8 (statement -> while_loop .)
    COMMAND_IF      reduce using rule 8 (statement -> while_loop .)
    COMMAND_WHILE   reduce using rule 8 (statement -> while_loop .)
    COMMAND_BREAK   reduce using rule 8 (statement -> while_loop .)
    FUNC_RETURN     reduce using rule 8 (statement -> while_loop .)
    FUNC_DEFINE     reduce using rule 8 (statement -> while_loop .)
    ID              reduce using rule 8 (statement -> while_loop .)
    $end            reduce using rule 8 (statement -> while_loop .)
    CLOSE_BLOCK     reduce using rule 8 (statement -> while_loop .)
    COMMAND_ELSE    reduce using rule 8 (statement -> while_loop .)


state 10

    (9) statement -> break . ;

    ;               shift and go to state 53


state 11

    (10) statement -> return_statement . ;

    ;               shift and go to state 54


state 12

    (11) statement -> function_def .

    ;               reduce using rule 11 (statement -> function_def .)
    [               reduce using rule 11 (statement -> function_def .)
    STRING_LITERAL  reduce using rule 11 (statement -> function_def .)
    (               reduce using rule 11 (statement -> function_def .)
    !               reduce using rule 11 (statement -> function_def .)
    COMMAND_PRINT   reduce using rule 11 (statement -> function_def .)
    COMMAND_RANDOM  reduce using rule 11 (statement -> function_def .)
    VAL_LITERAL     reduce using rule 11 (statement -> function_def .)
    -               reduce using rule 11 (statement -> function_def .)
    CHAR_LITERAL    reduce using rule 11 (statement -> function_def .)
    TYPE            reduce using rule 11 (statement -> function_def .)
    ARRAY_TYPE      reduce using rule 11 (statement -> function_def .)
    STRING_TYPE     reduce using rule 11 (statement -> function_def .)
    OPEN_BLOCK      reduce using rule 11 (statement -> function_def .)
    COMMAND_IF      reduce using rule 11 (statement -> function_def .)
    COMMAND_WHILE   reduce using rule 11 (statement -> function_def .)
    COMMAND_BREAK   reduce using rule 11 (statement -> function_def .)
    FUNC_RETURN     reduce using rule 11 (statement -> function_def .)
    FUNC_DEFINE     reduce using rule 11 (statement -> function_def .)
    ID              reduce using rule 11 (statement -> function_def .)
    $end            reduce using rule 11 (statement -> function_def .)
    CLOSE_BLOCK     reduce using rule 11 (statement -> function_def .)
    COMMAND_ELSE    reduce using rule 11 (statement -> function_def .)


state 13

    (33) expr -> [ . elements ]
    (34) expr -> [ . ]
    (36) elements -> . expr
    (37) elements -> . elements , expr
    (33) expr -> . [ elements ]
    (34) expr -> . [ ]
    (35) expr -> . STRING_LITERAL
    (38) expr -> . expr AR_METHOD_SIZE ( )
    (39) expr -> . expr AR_METHOD_SIZE ( expr )
    (40) expr -> . expr AR_METHOD_RESIZE ( arguments )
    (41) expr -> . variable [ expr ]
    (42) expr -> . variable [ expr ] = expr
    (43) expr -> . expr + expr
    (44) expr -> . expr - expr
    (45) expr -> . expr * expr
    (46) expr -> . expr / expr
    (47) expr -> . expr ASSIGN_ADD expr
    (48) expr -> . expr ASSIGN_SUB expr
    (49) expr -> . expr ASSIGN_MULT expr
    (50) expr -> . expr ASSIGN_DIV expr
    (51) expr -> . ( expr )
    (52) expr -> . expr COMP_EQU expr
    (53) expr -> . expr COMP_NEQU expr
    (54) expr -> . expr < expr
    (55) expr -> . expr COMP_LTE expr
    (56) expr -> . expr > expr
    (57) expr -> . expr COMP_GTE expr
    (58) expr -> . expr BOOL_AND expr
    (59) expr -> . expr BOOL_OR expr
    (60) expr -> . ! expr
    (61) expr -> . COMMAND_PRINT ( arguments )
    (64) expr -> . COMMAND_RANDOM ( expr )
    (65) expr -> . VAL_LITERAL
    (66) expr -> . - VAL_LITERAL
    (67) expr -> . CHAR_LITERAL
    (68) expr -> . variable
    (69) expr -> . - variable
    (70) expr -> . variable = expr
    (71) variable -> . ID

    ]               shift and go to state 56
    [               shift and go to state 13
    STRING_LITERAL  shift and go to state 14
    (               shift and go to state 15
    !               shift and go to state 18
    COMMAND_PRINT   shift and go to state 19
    COMMAND_RANDOM  shift and go to state 20
    VAL_LITERAL     shift and go to state 21
    -               shift and go to state 17
    CHAR_LITERAL    shift and go to state 22
    ID              shift and go to state 24

    elements                       shift and go to state 55
    expr                           shift and go to state 57
    variable                       shift and go to state 16

state 14

    (35) expr -> STRING_LITERAL .

    ;               reduce using rule 35 (expr -> STRING_LITERAL .)
    AR_METHOD_SIZE  reduce using rule 35 (expr -> STRING_LITERAL .)
    AR_METHOD_RESIZE reduce using rule 35 (expr -> STRING_LITERAL .)
    +               reduce using rule 35 (expr -> STRING_LITERAL .)
    -               reduce using rule 35 (expr -> STRING_LITERAL .)
    *               reduce using rule 35 (expr -> STRING_LITERAL .)
    /               reduce using rule 35 (expr -> STRING_LITERAL .)
    ASSIGN_ADD      reduce using rule 35 (expr -> STRING_LITERAL .)
    ASSIGN_SUB      reduce using rule 35 (expr -> STRING_LITERAL .)
    ASSIGN_MULT     reduce using rule 35 (expr -> STRING_LITERAL .)
    ASSIGN_DIV      reduce using rule 35 (expr -> STRING_LITERAL .)
    COMP_EQU        reduce using rule 35 (expr -> STRING_LITERAL .)
    COMP_NEQU       reduce using rule 35 (expr -> STRING_LITERAL .)
    <               reduce using rule 35 (expr -> STRING_LITERAL .)
    COMP_LTE        reduce using rule 35 (expr -> STRING_LITERAL .)
    >               reduce using rule 35 (expr -> STRING_LITERAL .)
    COMP_GTE        reduce using rule 35 (expr -> STRING_LITERAL .)
    BOOL_AND        reduce using rule 35 (expr -> STRING_LITERAL .)
    BOOL_OR         reduce using rule 35 (expr -> STRING_LITERAL .)
    ]               reduce using rule 35 (expr -> STRING_LITERAL .)
    ,               reduce using rule 35 (expr -> STRING_LITERAL .)
    )               reduce using rule 35 (expr -> STRING_LITERAL .)


state 15

    (51) expr -> ( . expr )
    (33) expr -> . [ elements ]
    (34) expr -> . [ ]
    (35) expr -> . STRING_LITERAL
    (38) expr -> . expr AR_METHOD_SIZE ( )
    (39) expr -> . expr AR_METHOD_SIZE ( expr )
    (40) expr -> . expr AR_METHOD_RESIZE ( arguments )
    (41) expr -> . variable [ expr ]
    (42) expr -> . variable [ expr ] = expr
    (43) expr -> . expr + expr
    (44) expr -> . expr - expr
    (45) expr -> . expr * expr
    (46) expr -> . expr / expr
    (47) expr -> . expr ASSIGN_ADD expr
    (48) expr -> . expr ASSIGN_SUB expr
    (49) expr -> . expr ASSIGN_MULT expr
    (50) expr -> . expr ASSIGN_DIV expr
    (51) expr -> . ( expr )
    (52) expr -> . expr COMP_EQU expr
    (53) expr -> . expr COMP_NEQU expr
    (54) expr -> . expr < expr
    (55) expr -> . expr COMP_LTE expr
    (56) expr -> . expr > expr
    (57) expr -> . expr COMP_GTE expr
    (58) expr -> . expr BOOL_AND expr
    (59) expr -> . expr BOOL_OR expr
    (60) expr -> . ! expr
    (61) expr -> . COMMAND_PRINT ( arguments )
    (64) expr -> . COMMAND_RANDOM ( expr )
    (65) expr -> . VAL_LITERAL
    (66) expr -> . - VAL_LITERAL
    (67) expr -> . CHAR_LITERAL
    (68) expr -> . variable
    (69) expr -> . - variable
    (70) expr -> . variable = expr
    (71) variable -> . ID

    [               shift and go to state 13
    STRING_LITERAL  shift and go to state 14
    (               shift and go to state 15
    !               shift and go to state 18
    COMMAND_PRINT   shift and go to state 19
    COMMAND_RANDOM  shift and go to state 20
    VAL_LITERAL     shift and go to state 21
    -               shift and go to state 17
    CHAR_LITERAL    shift and go to state 22
    ID              shift and go to state 24

    expr                           shift and go to state 58
    variable                       shift and go to state 16

state 16

    (41) expr -> variable . [ expr ]
    (42) expr -> variable . [ expr ] = expr
    (68) expr -> variable .
    (70) expr -> variable . = expr

    [               shift and go to state 59
    ;               reduce using rule 68 (expr -> variable .)
    AR_METHOD_SIZE  reduce using rule 68 (expr -> variable .)
    AR_METHOD_RESIZE reduce using rule 68 (expr -> variable .)
    +               reduce using rule 68 (expr -> variable .)
    -               reduce using rule 68 (expr -> variable .)
    *               reduce using rule 68 (expr -> variable .)
    /               reduce using rule 68 (expr -> variable .)
    ASSIGN_ADD      reduce using rule 68 (expr -> variable .)
    ASSIGN_SUB      reduce using rule 68 (expr -> variable .)
    ASSIGN_MULT     reduce using rule 68 (expr -> variable .)
    ASSIGN_DIV      reduce using rule 68 (expr -> variable .)
    COMP_EQU        reduce using rule 68 (expr -> variable .)
    COMP_NEQU       reduce using rule 68 (expr -> variable .)
    <               reduce using rule 68 (expr -> variable .)
    COMP_LTE        reduce using rule 68 (expr -> variable .)
    >               reduce using rule 68 (expr -> variable .)
    COMP_GTE        reduce using rule 68 (expr -> variable .)
    BOOL_AND        reduce using rule 68 (expr -> variable .)
    BOOL_OR         reduce using rule 68 (expr -> variable .)
    ]               reduce using rule 68 (expr -> variable .)
    ,               reduce using rule 68 (expr -> variable .)
    )               reduce using rule 68 (expr -> variable .)
    =               shift and go to state 60


state 17

    (66) expr -> - . VAL_LITERAL
    (69) expr -> - . variable
    (71) variable -> . ID

    VAL_LITERAL     shift and go to state 61
    ID              shift and go to state 24

    variable                       shift and go to state 62

state 18

    (60) expr -> ! . expr
    (33) expr -> . [ elements ]
    (34) expr -> . [ ]
    (35) expr -> . STRING_LITERAL
    (38) expr -> . expr AR_METHOD_SIZE ( )
    (39) expr -> . expr AR_METHOD_SIZE ( expr )
    (40) expr -> . expr AR_METHOD_RESIZE ( arguments )
    (41) expr -> . variable [ expr ]
    (42) expr -> . variable [ expr ] = expr
    (43) expr -> . expr + expr
    (44) expr -> . expr - expr
    (45) expr -> . expr * expr
    (46) expr -> . expr / expr
    (47) expr -> . expr ASSIGN_ADD expr
    (48) expr -> . expr ASSIGN_SUB expr
    (49) expr -> . expr ASSIGN_MULT expr
    (50) expr -> . expr ASSIGN_DIV expr
    (51) expr -> . ( expr )
    (52) expr -> . expr COMP_EQU expr
    (53) expr -> . expr COMP_NEQU expr
    (54) expr -> . expr < expr
    (55) expr -> . expr COMP_LTE expr
    (56) expr -> . expr > expr
    (57) expr -> . expr COMP_GTE expr
    (58) expr -> . expr BOOL_AND expr
    (59) expr -> . expr BOOL_OR expr
    (60) expr -> . ! expr
    (61) expr -> . COMMAND_PRINT ( arguments )
    (64) expr -> . COMMAND_RANDOM ( expr )
    (65) expr -> . VAL_LITERAL
    (66) expr -> . - VAL_LITERAL
    (67) expr -> . CHAR_LITERAL
    (68) expr -> . variable
    (69) expr -> . - variable
    (70) expr -> . variable = expr
    (71) variable -> . ID

    [               shift and go to state 13
    STRING_LITERAL  shift and go to state 14
    (               shift and go to state 15
    !               shift and go to state 18
    COMMAND_PRINT   shift and go to state 19
    COMMAND_RANDOM  shift and go to state 20
    VAL_LITERAL     shift and go to state 21
    -               shift and go to state 17
    CHAR_LITERAL    shift and go to state 22
    ID              shift and go to state 24

    expr                           shift and go to state 63
    variable                       shift and go to state 16

state 19

    (61) expr -> COMMAND_PRINT . ( arguments )

    (               shift and go to state 64


state 20

    (64) expr -> COMMAND_RANDOM . ( expr )

    (               shift and go to state 65


state 21

    (65) expr -> VAL_LITERAL .
